test/configCases/errors/invalid-entry-type/webpack.config.js
"use strict";

module.exports = {
	entry: 123
};
